# IKDH

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
SIMERO/: example_implicit_sphere.mw  readme.txt  xmp1.mw  xmp10.mw  xmp11-husty.mw  xmp11.mw  xmp12.mw  xmp13-husty.mw  xmp13.mw  xmp14.mw  xmp15-husty.mw  xmp15.mw  xmp16.mw  xmp17.mw  xmp18-husty.mw  xmp18.mw  xmp19-husty.mw  xmp19.mw  xmp2.mw  xmp20-husty.mw  xmp20.mw  xmp21.mw  xmp3.mw  xmp4.mw  xmp5-husty.mw  xmp5.mw  xmp7.mw  xmp8.mw  xmp9.mw
cmake/: IKDHConfig.cmake.in
examples/: demo.cpp  gofa5.cpp  ik_print.h  poly.cpp  robots.h
examples/cpp/: demo.cpp  example_common.h  gofa5_DH.cpp  gofa5_yaml.cpp  ik_print.h  path_planning.cpp  run_from_DH.cpp  run_from_yaml.cpp
examples/python/: _common.py  check_singularity.py  demo.py  gofa5_DH.py  gofa5_yaml.py  ik_print.py  path_planning.ipynb  run_from_DH.py  run_from_yaml.py
inc/hupf/: Input.h
include/: ikdh.h  robots.h
robodk/: _format.py  robodk_dh.py  robodk_to_yaml.py  robodk_verify.py
robots/: abb_crb_1300_10_1_15.yaml  abb_crb_1300_11_0_9.yaml  abb_crb_1300_7_1_4.yaml  abb_crb_15000.yaml  abb_crb_15000_10.yaml  abb_crb_15000_10_152.yaml  abb_crb_15000_gofa_12.yaml  abb_irb_1010_1_5_0_37.yaml  abb_irb_1100_4_0_475.yaml  abb_irb_1100_4_0_58.yaml  abb_irb_1200_5_0_9.yaml  abb_irb_1200_5_0_9_gen2.yaml  abb_irb_1200_7_0_7.yaml  abb_irb_120_3_0_6.yaml  abb_irb_1300_10_1_15.yaml  abb_irb_1300_11_0_9.yaml  abb_irb_1300_7_1_4.yaml  abb_irb_140_6_0_8.yaml  abb_irb_1410_4_1_45.yaml  abb_irb_1520id.yaml  abb_irb_1600_10_1_45.yaml  abb_irb_1600_6_1_2.yaml  abb_irb_1600_6_1_45.yaml  abb_irb_1600_8_1_2.yaml  abb_irb_1600_8_1_45.yaml  abb_irb_1600id_4_1_5.yaml  abb_irb_1660_4_1_55.yaml  abb_irb_1660id_4_1_55.yaml  abb_irb_2400_10.yaml  abb_irb_2400_16.yaml  abb_irb_2400_l.yaml  abb_irb_2600_12_1_65.yaml  abb_irb_2600_12_1_85.yaml  abb_irb_2600_20_1_65.yaml  abb_irb_2600id_15_1_85.yaml  abb_irb_2600id_8_2_00.yaml  abb_irb_4400_45_m94a.yaml  abb_irb_4400_60.yaml  abb_irb_4400_l30_m2000.yaml  abb_irb_4600_20_2_50.yaml  (+1138 more)
src/: ikdh.cpp  ikdh_bindings.cpp  ikdh_wasm.cpp
src/hupf/: Calculate.cpp  Hyperplane.h  Input.h  KinematicSurface.h  Matrix.h  Polynomial.h  SolveForAngles.h  ik.cpp  ik.h  poly_capture.h  proj_eval.h
src/hupf/rrp/: left_rrp.h
src/hupf/rrr/: left_3r.h  right_3r.h  t2.h  wrist_sol.h
src/ikdh/: __init__.py
tools/: compute_jacobian.py  demo.ipynb  derive_jacobian.py  derive_poly.cpp  eval_jacobian.py  poly.cpp  regenerate_jacobians.py  robodk_dh.py  robodk_verify.py  run_benchmark.cpp
tools/symbolic/: hupf_poly.py  hupf_poly.wl
tools/symbolic/checkpoints/: H.pkl
web/: analysis.js  build.sh  generate_robot_list.py  ikdh.html  ikdh.js  ikdh.wasm  index.html
